# inpick-app

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  next.config.mjs  package-lock.json  package.json  playwright.config.ts  requirements.txt  tailwind.config.ts
datasets/floorplan-yolo/: dataset.yaml
e2e/: api.spec.ts  consumer-workflow.spec.ts  contractor-auth.spec.ts  smoke.spec.ts
public/: manifest.json  sw.js
public/floorplans/: apt-fp-041684981.json  apt-fp-097133521.json  apt-fp-138268866.json  apt-fp-301349783.json  apt-fp-371618742.json  apt-fp-530278719.json  apt-fp-655639299.json  apt-fp-672590224.json  apt-fp-719765723.json  apt-fp-863136882.json  index.json  sample-59.json  sample-84a.json  sample-84b-exterior.json  sample-84b.json
python/floorplan-ai/: Dockerfile  main.py  pyproject.toml  requirements.txt  run_pipeline.py
python/floorplan-ai/configs/: pipeline_config.yaml  yolo_floorplan.yaml
python/floorplan-ai/src/: __init__.py  api_server.py  pipeline.py  preprocessor.py  symbol_detector.py  text_recognizer.py  vectorizer.py  wall_extractor.py
python/floorplan-ai/tests/: test_pipeline.py
scripts/: coco-types.ts  convert-dwg.py  embed-knowledge.ts  extract-lh-knowledge.ts  generate-synthetic-training.ts  geometry-utils.ts  parse-dxf.py  parse-pdf-vector.py  parse-samples.mjs  process-drawings.ts  process-str.ts  synthetic-walls.ts  test-ai-pipeline.py  test-all-drawings.mjs  test-api-parse.mjs  test-gemini-parse.mjs  test-integration.py  train-yolo-floorplan.py
src/app/: error.tsx  globals.css  layout.tsx  page.tsx  (+4 more)
supabase/: config.toml
(+261 files in other folders)
